Evolution #161: Session sécurité
Ajout d'un element de perturbation des tokens, et ajout d'un token pour la suppression d'element.

--- a/src/Muzich/CommentBundle/Resources/views/Comment/comment.html.twig
+++ b/src/Muzich/CommentBundle/Resources/views/Comment/comment.html.twig
@@ -8,20 +8,20 @@
 {% if app.user.id != comment.u.i %}
   <a title="{{ 'comment.report.link_title'|trans({}, 'userui') }}" 
     class="comment_report" 
-    href="{{ path('ajax_alert_comment', {'element_id':element_id, 'date': comment.d, 'token':app.user.getPersonalHash}) }}">
+    href="{{ path('ajax_alert_comment', {'element_id':element_id, 'date': comment.d, 'token':app.user.getPersonalHash(element_id)}) }}">
     <img src="{{ asset('bundles/muzichcore/img/1331832708_comment_alert.png') }}" alt="report" />
   </a>
 {% endif %}
 
 {% if app.user.id == comment.u.i %}
   <a title="{{ 'comment.edit.link'|trans({}, 'elements') }}" class="comment_edit_link" 
-     href="{{ path('ajax_edit_comment', {'element_id': element_id, 'date':comment.d, 'token':app.user.getPersonalHash})  }}" style="display: none;"
+     href="{{ path('ajax_edit_comment', {'element_id': element_id, 'date':comment.d, 'token':app.user.getPersonalHash(element_id)})  }}" style="display: none;"
   >
     <img src="{{ asset('bundles/muzichcore/img/1327151338_desktop.png') }}" alt="edit" />
   </a>
 
   <a title="{{ 'comment.remove.link'|trans({}, 'elements') }}" class="comment_remove_link" 
-     href="{{ path('ajax_delete_comment', {'element_id': element_id, 'date':comment.d, 'token':app.user.getPersonalHash})  }}" style="display: none;"
+     href="{{ path('ajax_delete_comment', {'element_id': element_id, 'date':comment.d, 'token':app.user.getPersonalHash(element_id)})  }}" style="display: none;"
   >
     <img src="{{ asset('bundles/muzichcore/img/1327168960_fileclose.png') }}" alt="delete" />
   </a>
