--- a/src/Muzich/GroupBundle/Resources/views/Default/myList.html.twig
+++ b/src/Muzich/GroupBundle/Resources/views/Default/myList.html.twig
@@ -29,7 +29,7 @@
         <a href="{{ path('show_group', { 'slug': group.slug }) }}">{{ group.name }}</a>
         
         <a title="{{ 'group.remove.link'|trans({}, 'groups') }}" class="group_remove_link" 
-          href="{{ path('group_delete', {'group_id' : group.id, 'token': app.user.personalHash})  }}"
+          href="{{ path('group_delete', {'group_id' : group.id, 'token': app.user.personalHash(group.id)})  }}"
         >
           <img src="{{ asset('bundles/muzichcore/img/1327168960_fileclose.png') }}" alt="delete" />
         </a>
