--- a/src/Muzich/HomeBundle/Resources/views/Show/showGroup.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Show/showGroup.html.twig
@@ -19,7 +19,7 @@
         </a>
       {% endif %}
       
-      <a href="{{ path('follow', { 'type': 'group', 'id': group.id, 'token': user.personalHash }) }}" 
+      <a href="{{ path('follow', { 'type': 'group', 'id': group.id, 'token': user.personalHash(group.id) }) }}" 
          class="follow_link button darkbutton {% if following %}following{% else %}notfollowing{% endif %}">
         {% if following %}
           {{ 'group.following'|trans({}, 'groups') }}
