--- a/src/Muzich/HomeBundle/Resources/views/Show/showUser.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Show/showUser.html.twig
@@ -14,7 +14,7 @@
     <div class="show_options">
             
       {% if app.user.id != viewed_user.id %}
-        <a href="{{ path('follow', { 'type': 'user', 'id': viewed_user.id, 'token': user.personalHash }) }}" 
+        <a href="{{ path('follow', { 'type': 'user', 'id': viewed_user.id, 'token': user.personalHash(viewed_user.id) }) }}" 
            class="follow_link button darkbutton {% if following %}following{% else %}notfollowing{% endif %}" >
           {% if following %}
             {{ 'user.following'|trans({}, 'users') }}
