Evolution #169: Interface d'aide
Mise ne place des librairies.

--- a/src/Muzich/CoreBundle/Resources/views/Layout/head_css.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Layout/head_css.html.twig
@@ -4,6 +4,7 @@
   'jplayer/skin/blue.monday/jplayer.blue.monday.css'
   'bundles/muzichcore/css/base.css'
   'bundles/muzichcore/css/old.css'
+  'css/joyride-2.0.3.css'
   'css/main.css' %}{# filter='yui_css' %}#}
   <link rel="stylesheet" href="{{ asset_url }}" />
 {% endstylesheets %}
