--- a/src/Muzich/CoreBundle/Resources/views/Layout/head_js.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Layout/head_js.html.twig
@@ -8,6 +8,7 @@
   'jplayer/js/jplayer.playlist.min.js'
   'js/jquery.form-2.14.js'
   'js/jConfirmAction/jconfirmaction.jquery.js'
+  'js/jquery.joyride-2.0.3.js'
   '@MuzichCoreBundle/Resources/public/js/TagPrompt.js'
   '@MuzichCoreBundle/Resources/public/js/player/*'
   '@MuzichCoreBundle/Resources/public/js/play2.js'
