Evolution #592: Clarté composants Ajout d'un petit texte d'aide sur les tags favoris.

--- a/src/Muzich/CoreBundle/Resources/views/Tag/tagsList.favorite.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Tag/tagsList.favorite.html.twig
@@ -7,6 +7,8 @@
     'user_id': user_id, 
     'tags_ids_json' : ''
   }) }}" />
+  
+  <p><span class="help">{{ 'tag_favorites.help'|trans({}, 'elements') }}</span></p>
          
   <ul id="favorite_tags">
     {% for key, tag in tags %}
