--- a/src/Muzich/HomeBundle/Resources/views/Home/need_tags.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Home/need_tags.html.twig
@@ -17,6 +17,7 @@
   {% if elements|length %}
     {% include "MuzichCoreBundle:SearchElement:more_button.html.twig" with {
       'more_path'     : path('search_elements_more', {
+        'context'    : 'need_tags',
         'session_id' : app.user.getPersonalHash('needstagpage'),
         'id_limit'   : last_element_id
       }),
