--- a/src/Muzich/CoreBundle/Resources/views/Component/element_autoplay_button.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Component/element_autoplay_button.html.twig
@@ -1,4 +1,4 @@
-<a href="{{ autoplay_path }}" class="button" id="autoplay_launch" 
+<!--<a href="{{ autoplay_path }}" class="button" id="autoplay_launch" 
    title="{{ 'elements.autoplay.launch'|trans({}, 'elements') }}" >
   <img src="{{ asset('/bundles/muzichcore/img/1353494305_player_play.png') }}" alt="" />
-</a>
+</a>-->
