--- a/src/Muzich/FavoriteBundle/Resources/views/Favorite/userList.html.twig
+++ b/src/Muzich/FavoriteBundle/Resources/views/Favorite/userList.html.twig
@@ -21,17 +21,12 @@
       'user_id' : viewed_user.id
     } %}
     
-    {% include 'MuzichCoreBundle:Component:element_autoplay_button.html.twig' with {
-      'autoplay_path' : path('elements_get_filter_data_autoplay_favorite', {
-        'show_type'  : 'user',
-        'show_id'    : viewed_user.id, 
-        'data'       : '[]'
-      })
-    } %}
-    
   </div>
 
-  {% include "MuzichCoreBundle:SearchElement:default.html.twig" %}
+  {% include "MuzichCoreBundle:SearchElement:default.html.twig" with{
+      'display_autoplay'     : true,
+      'autoplay_context'     : 'favorite_user'
+  } %}
     
   {% if elements|length %}
     {% include "MuzichCoreBundle:SearchElement:more_button.html.twig" with {
@@ -46,10 +41,4 @@
     }%}
   {% endif %}
   
-  <input type="hidden" id="autoplay_url" value="{{ path('elements_get_filter_data_autoplay_favorite', {
-    'show_type'  : 'user',
-    'show_id'    : viewed_user.id, 
-    'data' : ''
-  }) }}" />
-    
 {% endblock %}
