--- a/src/Muzich/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/layout.html.twig
@@ -14,7 +14,7 @@
   <div id="container">
     
     {% if app.user %}
-      <a onmouseover="UE.Popin.preload();" href="#" onclick="UE.Popin.show(); return false;">Vos retours</a>
+      <a style="display: none;" onmouseover="UE.Popin.preload();" href="#" onclick="UE.Popin.show(); return false;">Vos retours</a>
     {% endif %}
   
     <div id="main_content">
