Evolution #601: Admin: re-création: integration de la recherche en ajax dans l'admin

--- a/app/Resources/AdmingeneratorGeneratorBundle/views/base_admin_assetic_less.html.twig
+++ b/app/Resources/AdmingeneratorGeneratorBundle/views/base_admin_assetic_less.html.twig
@@ -43,6 +43,11 @@
         <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ asset('bundles/admingeneratorgenerator/ico/apple-touch-icon-72-precomposed.png') }}">
         <link rel="apple-touch-icon-precomposed" href="{{ asset('bundles/admingeneratorgenerator/ico/apple-touch-icon-57-precomposed.png') }}">
     {% endblock %}
+    
+    
+    <link rel="stylesheet" href="{{ asset('css/jquery-ui-1.10.1.autocomplete.min.css') }}" type="text/css" media="all" />
+    <script type="text/javascript" src="{{ asset('js/jquery-ui-1.10.1.autocomplete.min.js') }}"></script>
+    
   </head>
 
   <body>
