--- a/src/Muzich/CoreBundle/Resources/views/Layout/head_js.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Layout/head_js.html.twig
@@ -1,6 +1,6 @@
 {% javascripts
   'js/jquery-1.8.2.prod.js'
-  'js/jquery-ui-1.8.7.min.js'
+  'js/jquery-ui-1.10.1.custom.min.js'
   'js/swfobject.js'
   'js/soundcloud/api.js'
   'js/soundcloud/sdk.js'
@@ -8,6 +8,8 @@
   'jplayer/js/jplayer.playlist.min.js'
   'js/jquery.form-2.14.js'
   'js/jConfirmAction/jconfirmaction.jquery.js'
+  'js/jquery.scrollTo.min.js'
+  'js/jquery.aSimpleTour.js'
   '@MuzichCoreBundle/Resources/public/js/TagPrompt.js'
   '@MuzichCoreBundle/Resources/public/js/player/*'
   '@MuzichCoreBundle/Resources/public/js/play2.js'
