--- a/src/Muzich/CoreBundle/Resources/views/Tag/tagsPrompt.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Tag/tagsPrompt.html.twig
@@ -1,4 +1,7 @@
 
+<a title="{{ 'tags.prompt.help_box_title'|trans({}, 'userui') }}" href="{{ path('helpbox_bootstrap', {'ressource_id':'tags_prompt'}) }}" class="helpbox tags_prompt_helpbox">
+  <img alt="help ?" src="{{ asset('img/1362157855_help.png') }}" />
+</a>
 
 <div class="tags_prompt" id="tags_prompt_{{ form_name }}">
    
