Evolution #633: Ergo: bordure: Bordures egalisés pour cadre vignette + arrondis.

--- a/src/Muzich/CoreBundle/Resources/public/css/main.css
+++ b/src/Muzich/CoreBundle/Resources/public/css/main.css
@@ -306,7 +306,9 @@ td.element_thumbnail
   background-color: #d5d5d5;
   padding: 4px;
   text-align: center;
-  width: 140px;
+  width: 126px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px; 
 }
 
 li.element img.element_thumbnail
