--- a/src/Muzich/CoreBundle/Resources/views/Layout/head_js.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Layout/head_js.html.twig
@@ -2,8 +2,6 @@
   'js/jquery-1.8.2.prod.js'
   'js/jquery-ui-1.10.1.custom.min.js'
   'js/swfobject.js'
-  'js/soundcloud/api.js'
-  'js/soundcloud/sdk.js'
   'jplayer/js/jquery.jplayer.min.js'
   'jplayer/js/jplayer.playlist.min.js'
   'js/jquery.form-2.14.js'
@@ -18,11 +16,24 @@
   <script src="{{ asset_url }}"></script>
 {% endjavascripts %}
 
+<!--<script src="https://w.soundcloud.com/player/api.js"></script>
+<script src="https://connect.soundcloud.com/sdk.js"></script>
+-->
 <script>
   $(document).ready(function(){  
-    // Pour le moment on charge toujours yt api
+    // Pour le moment on charge toujours ces scripts
     var tag = document.createElement('script');
     tag.src = "//www.youtube.com/iframe_api";
+    var firstScriptTag = document.getElementsByTagName('script')[0];
+    firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+    
+    var tag = document.createElement('script');
+    tag.src = "//w.soundcloud.com/player/api.js";
+    var firstScriptTag = document.getElementsByTagName('script')[0];
+    firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+    
+    var tag = document.createElement('script');
+    tag.src = "//connect.soundcloud.com/sdk.js";
     var firstScriptTag = document.getElementsByTagName('script')[0];
     firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
   });
