bug fix: mauvais appel vers template admin corrigé

--- a/src/Muzich/AdminBundle/Resources/views/Admin_userEdit/password.html.twig
+++ b/src/Muzich/AdminBundle/Resources/views/Admin_userEdit/password.html.twig
@@ -1,4 +1,4 @@
-{% extends "AdmingeneratorGeneratorBundle::base_admin_assetic_less.html.twig" %}
+{% extends "MuzichAdminBundle::base_admin_assetic_less.html.twig" %}
 
 {% block stylesheets %}{{ parent() }}{% endblock %}
 {% block javascripts %}{{ parent() }}{% endblock %}
