--- a/src/Muzich/AdminBundle/Resources/views/Dashboard/welcome.html.twig
+++ b/src/Muzich/AdminBundle/Resources/views/Dashboard/welcome.html.twig
@@ -1,4 +1,4 @@
-{% extends 'AdmingeneratorGeneratorBundle:Dashboard:dashboard.html.twig' %}
+{% extends 'MuzichAdminBundle:Dashboard:dashboard.html.twig' %}
 
 {% block title %}Admingenerator{% endblock %}
 
