bug fix: LEs template d'erreur ne s'etendaient pas vers le bon layout.

--- a/app/Resources/TwigBundle/views/Exception/error403.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error403.html.twig
@@ -1,4 +1,4 @@
-{% extends "JSPCoreBundle::layout_error.html.twig" %}
+{% extends 'MuzichCoreBundle::layout.html.twig' %}
 
 {% block title %}{{ 'error_page.forbidden.title'|trans({}, 'navigationui') }}{% endblock %}
 {% block mainbox_classes %}mainbox_padding{% endblock %}
