Evolution #596: Serveur mail: propre: ajout d'un footer avec adresses de contacts etc

--- a/app/Resources/FOSUserBundle/views/Resetting/email.txt.twig
+++ b/app/Resources/FOSUserBundle/views/Resetting/email.txt.twig
@@ -6,5 +6,6 @@
       '%url%'      : confirmationUrl,
       '%username%' : user.username
     }, 'text') }}
+    {{ 'mail.general.footer'|trans({}, 'text') }}
   {% endautoescape %}
 {% endblock %}
