--- a/src/Muzich/IndexBundle/Resources/views/Presubscription/confirm.txt.twig
+++ b/src/Muzich/IndexBundle/Resources/views/Presubscription/confirm.txt.twig
@@ -1,3 +1,4 @@
 {% autoescape false %}
   {{ 'mail.presubscription.text'|trans({'%url%':url}, 'text') }}
+  {{ 'mail.general.footer'|trans({}, 'text') }}
 {% endautoescape %}
