--- a/src/Muzich/UserBundle/Resources/views/User/resetting.email.twig
+++ b/src/Muzich/UserBundle/Resources/views/User/resetting.email.twig
@@ -6,5 +6,6 @@
       '%url%'      : confirmationUrl,
       '%username%' : user.username
     }, 'text') }}
+    {{ 'mail.general.footer'|trans({}, 'text') }}
   {% endautoescape %}
 {% endblock %}
