Anomalie #653: Bug ?! page fav: Petit oublie de '[]' comme liste de tags par defaut dans l'url du lien pour en afficher plus.

--- a/src/Muzich/FavoriteBundle/Resources/views/Favorite/userList.html.twig
+++ b/src/Muzich/FavoriteBundle/Resources/views/Favorite/userList.html.twig
@@ -32,7 +32,7 @@
     {% include "MuzichCoreBundle:SearchElement:more_button.html.twig" with {
       'more_path'     : path('favorite_get', {
         'user_id': viewed_user.id,
-        'tags_ids_json' : ''
+        'tags_ids_json' : '[]'
       }),
       'more_url_path' : path('favorite_get', {
         'user_id': viewed_user.id,
