--- a/src/Muzich/CoreBundle/Resources/views/Layout/footer.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Layout/footer.html.twig
@@ -3,7 +3,7 @@
   <div id="footer_logo">
     <img src="{{ asset('/img/icon_minilogo_3.png') }}" alt="footer_logo">
     <span class="fotter_muzich_big">&copy; MUZI.CH</span>
-    Tous droits réservés muzi.ch 2012 - 2013
+    Tous droits réservés Bastien Sévajol 2012 - 2013
   </div>
   
   {% include "MuzichCoreBundle:Info:container.html.twig" %}
