ajustement taille texte footer

--- a/src/Muzich/CoreBundle/Resources/public/css/main.css
+++ b/src/Muzich/CoreBundle/Resources/public/css/main.css
@@ -2017,3 +2017,7 @@ div.helpbox_image_container img
   -moz-border-radius: 5px;
   border-radius: 5px;
 }
+
+.fotter_muzich_little{
+  font-size: 9px;
+}
