Ajout des liens sociaux dans la barre.

--- a/src/Muzich/CoreBundle/Resources/views/Layout/side.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Layout/side.html.twig
@@ -9,7 +9,7 @@
     {% render "MuzichCoreBundle:Search:renderGlobalSearchForm" %}
   </div>
   
-  {#{% include 'MuzichCoreBundle:Layout:social.html.twig' %}#}
+  {% include 'MuzichCoreBundle:Layout:social.html.twig' %}
   
   {% render 'MuzichCoreBundle:Core:renderSideMenu' %}
 
