--- a/src/Muzich/CoreBundle/Resources/views/Layout/social.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Layout/social.html.twig
@@ -1,17 +1,17 @@
 <div id="social" class="nicebox">
   <ul class="social_links">
     <li>
-      <a href="" >
+      <a href="https://www.facebook.com/pages/Muzich/639661296050323" target="_blank" >
         <img src="{{ asset('/img/icon_facebook.png') }}" alt="facebook" />
       </a>
     </li>
     <li>
-      <a href="" >
+      <a href="https://twitter.com/Muzich_Official" >
         <img src="{{ asset('/img/icon_twitter.png') }}" alt="twitter" />
       </a>
     </li>
     <li>
-      <a href="" >
+      <a href="https://plus.google.com/u/1/communities/114923310009590627613" >
         <img src="{{ asset('/img/icon_googleplus.png') }}" alt="google plus" />
       </a>
     </li>
