--- a/src/Muzich/CoreBundle/Resources/views/Layout/footer.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Layout/footer.html.twig
@@ -6,6 +6,12 @@
     Tous droits réservés 
     <span class="fotter_muzich_little">Bastien Sevajol 2012 - 2013</span>
   </div>
+      
+  <div id="footer_logo_2">
+    <span>Graphics by:</span>
+    <br />
+    <a href="http://www.floor26.com/" target="_blank"><img style="margin-top: 10px;" src="{{ asset('/img/floor26.png') }}" alt="floor26_logo"></a>
+  </div>
   
   {% include "MuzichCoreBundle:Info:container.html.twig" %}
 
